# FdF

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate_suppressions.sh  manual.txt  max_int.fdf  my_suppressions.supp  text_file.txt  valgrind_output.txt
lib/: FdF.h  fdf.h  mlx_test.h
lib/ft_printf/: Makefile  ft_printf.c
lib/ft_printf/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.h
lib/libft/: Makefile  ft_atoll.c  ft_compare_sign.c  libft.h
maps/: 4.fdf  almost_empty.fdf
src/: draw.c  draw_helper.c  help_menu.c  keys_handler.c  main.c  old_version_of_draw.c  read_file.c  read_file_utils.c  set_param.c  test.c  test_minilibx.c  test_read_file_main.c  utils.c
src_backup_working_like_in_video/: draw.c  fdf.h  main.c  read_file.c  test_minilibx.c  test_read_file_main.c
